[package]
name = "pixelpwnr-exporter"
description = "A simple PixelPwnr Prometheus metrics exporter"
authors = [
    "Fredrik Falk <freddo@ludd.ltu.se>"
]
keywords = [
    "rocket",
    "prometheus",
    "pixelflut"
]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.txt"
homepage = "https://git.ludd.ltu.se/freddo/pixelpwnr-exporter"
repository = "https://git.ludd.ltu.se/freddo/pixelpwnr-exporter"


[dependencies]
rocket = "~0.5"
prometheus = "~0.14"
serde_yaml = "~0.9"
rocket_anyhow = "~0.2"
lazy_static = "1.5.0"